[project]
name = "comfyui-prompt-assembler"
description = "Modular prompt assembly nodes for ComfyUI — 8-slot, compact 4-slot, and weighted 6-slot with attention syntax"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/jeremieLouvaert/comfyui-prompt-assembler"

[tool.comfy]
PublisherId = "akurate"
DisplayName = "Prompt Assembler"
Icon = ""
